1. Added media queries 2. Fixed apple touch icon and description 3. Added spacing between next and previous buttons

--- a/src/components/comments/Comment.module.css
+++ b/src/components/comments/Comment.module.css
@@ -19,3 +19,9 @@
   text-decoration: none;
   color: inherit;
 }
+
+@media screen and (max-width: 350px) {
+  .story-item {
+    width: 100%;
+  }
+}
