--- a/src/components/stories/StoryItemSummary.module.css
+++ b/src/components/stories/StoryItemSummary.module.css
@@ -33,3 +33,9 @@
   text-decoration: none;
   color: inherit;
 }
+
+@media screen and (max-width: 350px) {
+  .story-item img {
+    display: none;
+  }
+}
